# Scorpipe

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GET_SETUP_EXE.md  INSTALL.md  LICENSE  MANUAL.md  README.md  RUNBOOK.md  SECURITY.md  SETUP_TROUBLESHOOTING.md  pyproject.toml  pytest.ini  release-please-config.json  setup.bat  setup_debug.bat
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: main-protection.json
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  labels-sync.yml  ossf_scorecard.yml  pr-labeler.yml  release-drafter.yml  release-please.yml  windows_release.yml
.notes/: instructions.md
docs/: AUDIT.md  CHATGPT_WORKFLOW.md  DEV_REMINDERS.md  EXECUTION_CONTRACT.md  GET_SETUP_EXE.md  GITHUB_AUTOMERGE.md  GITHUB_RULESETS.md  MANUAL.md  RECTIFICATION_MODEL.md  RELEASING.md  RUNBOOK.md  TASKS_v5.40.1.md  VERSIONING.md
packaging/windows/: GET_SETUP_EXE.md  build.ps1  entry_gui.py  entry_gui_debug.py  scorpipe.iss  scorpipe.spec
scripts/: run_tests.py  setup.bat  smoke_check.py
scripts/github/: apply_rulesets.sh  cleanup_dependabot_actions_prs.sh  enable_auto_merge.sh
scripts/windows/: Build_UI_EXE.bat  Run_UI.bat  Run_UI_console.bat  Run_UI_debug.bat  make_release_zip.ps1  setup.bat  setup_debug.bat  smoke_test.py
src/scorpio_pipe/: __init__.py  __main__.py  airvac.py  app_paths.py  autocfg.py  barycentric.py  boundary_contract.py  calib_compat.py  cli.py  compare_cache.py  config.py  doctor.py  exclude_policy.py  export_package.py  fits_utils.py  frame_signature.py  inspect.py  instrument_db.py  lamp_contract.py  log.py  logging_utils.py  manifest.py  mask_bits.py  maskbits.py  navigator.py  nightlog.py  noise_model.py  pairs_library.py  paths.py  plot_style.py  product_naming.py  products.py  products_manifest.py  project_manifest.py  prov_capture.py  provenance.py  qc_report.py  qc_suggestions.py  qc_thresholds.py  resource_utils.py  (+20 more)
src/scorpio_pipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scorpio_pipe/calib/: __init__.py  association.py  compat.py  manifest_schema.py
src/scorpio_pipe/contracts/: __init__.py  data_model.py  maskbits.py  units.py  validators.py  variance.py
src/scorpio_pipe/dataset/: __init__.py  builder.py  classify.py  manifest.py  manifest_io.py  match.py
src/scorpio_pipe/instruments/: __init__.py  meta.py  scorpio1.py  scorpio2.py
src/scorpio_pipe/io/: __init__.py  atomic.py  done_json.py  mef.py  quicklook.py
src/scorpio_pipe/metadata/: __init__.py  frame_meta.py  policy.py  sources.py
src/scorpio_pipe/pipeline/: __init__.py  engine.py
src/scorpio_pipe/qc/: __init__.py  flags.py  gate.py  lambda_map.py  metrics_store.py
src/scorpio_pipe/refs/: __init__.py  context.py  store.py
src/scorpio_pipe/resources/: README.md  henear_lines.csv  neon_lines.csv
src/scorpio_pipe/stages/: __init__.py  calib.py  (+11 more)
tests/: test_fits_smart_loader.py  test_gui_startup_lazy_imports.py  test_headers_sc1.py  test_headers_sc2.py  test_linearize_rebin_var.py  test_metrics_store.py  test_p0_a2_frame_classifier.py  test_p0_a_engine_unification.py  test_p0_b3_reference_context.py  test_p0_b5_flatfield_mask_contract.py  test_p0_b6_dataset_manifest_deterministic.py  test_p0_b6_framemeta_policy_unit.py  test_p0_b6_validate_product_unit.py  test_p0_b6_variance_model_unit.py  test_p0_b_dataset_manifest.py  test_p0_f_calib_compat.py  test_p0_i_project_manifest.py  test_p0_j_sky_soft_failure_passthrough.py  test_p0_k_manifest_exclude_resolver.py  test_p0_l_extract_upstream_degraded.py  test_p0_m_lamp_contract.py  test_p0_prov_001_boundary_contract.py  test_p0_prov_002_done_json_statuses.py  test_p0_prov_003_lambda_map_contract.py  test_p0_prov_004_engine_boundary_validation.py  test_p2_done_json_always_written.py  test_p2_eta_contract.py  test_p2_qc_aggregator_rules.py  test_p2_reg_010_stage_registry_order.py  test_p2_reg_020_stage_input_contracts.py  test_p2_syn_linearize_var_stat.py  test_p2_syn_sky_sub_raw_no_object_eating.py  test_p2_ws_010_validate_run_dir.py  test_products_and_qc.py  test_qc_report_basic.py  test_smoke_synthetic.py  test_stage_contracts.py  test_static_audit.py  test_subpixel_alignment.py
tests/golden/: smoke_signature.json
tools/: build_ui_exe.ps1  run_ui.py
work/ngc2784_test/: config.yaml
work/run1/: config.yaml
workflow/: .doit.db.dir  dodo.py
(+38 files in other folders)
